--- a/index.html
+++ b/index.html
@@ -20,6 +20,37 @@
         <label for="date">Date:</label> 
         <input type="text" id="date" name="date" required>
     </div>
+    <div class="name">
+    <label for="name">Name:</label> 
+    <input type="text" id="name" name="name" required> 
+</div>
+<div class="team">
+    <label for="team">Team:</label> 
+    <input type="team" id="team" name="team" required>
+</div>
+<div class="position"> 
+    <label for="position">Position:</label> 
+    <input type="position" id="position" name="position" required> 
+</div>
+<div class="atbat">
+    <label for="atbat">At Bat:</label> 
+    <input type="atbat" id="atbat" name="atbat" required> 
+</div>
+<div class="hitOut">
+    <label for="hitOrOut">Pick:</label> 
+    <select id="hitOrOut" name="hitOrOut" required>
+        <option value="">Select an option</option>
+        <option value="flyout">Fly Out</option>
+        <option value="groundout">Ground Out</option>
+        <option value="hit">Hit</option>
+        <option value="strike">Strike Out</option>
+        <option value="thrownout">Thrown Out</option>
+        <option value="walk">Walk</option>
+    </select>
+</div>
+<div class="submit">
+    <button type="submit">Submit</button> 
+</div>
     <!-- Add other Batting form fields here -->
 </section>
 
@@ -28,6 +59,25 @@
     <div class="name">
         <label for="name">Name:</label> 
         <input type="text" id="name" name="name" required>
+    </div>
+    <div class="team">
+        <label for="team">Team:</label> 
+        <input type="team" id="team" name="team" required>
+    </div>
+    <div class="hits"> 
+        <label for="hits">Hits:</label> 
+        <input type="hits" id="hits" name="hits" required> 
+    </div>
+    <div class="balls">
+        <label for="balls">Balls:</label> 
+        <input type="balls" id="balls" name="balls" required> 
+    </div>
+    <div class="innings">
+        <label for="inningsPitched">Innings Pitched:</label> 
+        <input type="inningsPitched" id="inningsPitched" name="inningsPitched" required> 
+    </div>
+    <div class="submit">
+        <button type="submit">Submit</button> 
     </div>
     <!-- Add other Pitching form fields here -->
 </section>
