--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
+    <header class="data">
+        <h1>Baseball Data Collection</h1>
+        <div>
+            <img src="images/al.gif" height="150" width="150" alt="image">
+            <img src="images/mlb.jpg" height="150" width="150" alt="image">
+            <img src="images/nl.gif" height="150" width="150" alt="image">
+        </div>
+    </header>
 <h2>Select Pitching or Batting:</h2>
 <select id="selection" onchange="toggleForm()">
     <option value="">Select...</option>
